# perpetuator-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.env  setup.py
notes/: DEVELOPMENT.md
src/: api.py  auth.py  perc.py  shared.py
tests/: shared.py  test_prompt.py  test_token.py
tests/data/: Bob_McSecret.md  Nancy_Nobodyknows.md
